--- a/frontend/src/Analysis.module.css
+++ b/frontend/src/Analysis.module.css
@@ -5,14 +5,17 @@
 }
 
 .playlistHeader {
-
+    margin-top: 20px;
+    text-align: center;
 }
 
 .playlistName {
     color: var(--primary-light);
-    line-height: 1;
-    font-size: 32pt;
+    line-height: 1.5;
+    font-size: 40pt;
     margin: 20px 0 10px 0;
+    font-family: "Ubuntu", sans-serif;
+    letter-spacing: -1px;
 }
 
 .playlistHeader p {
@@ -22,10 +25,25 @@
     font-size: 14pt;
 }
 
+.explicit {
+    display: inline-block;
+    font-size: 0.7rem;
+    font-weight: 700;
+    color: var(--black);
+    background-color: var(--white);
+    border-radius: 2px;
+    padding: 3px 5px;
+    margin-left: 4px;
+    margin-right: 2px;
+    vertical-align: middle;
+    line-height: 1;
+}
+
 .linkButtons {
     display: flex;
     flex-wrap: wrap;
     gap: 1.25rem;
+    justify-content: center;
 }
 
 .linkButtons button, a {
